--- a/job-controller/src/main/resources/META-INF/resources/home.html
+++ b/job-controller/src/main/resources/META-INF/resources/home.html
@@ -14,6 +14,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
         <script src="/webjars/ace/1.2.2/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+        <script src="http://cdn.sockjs.org/sockjs-0.3.min.js"></script>
+        <script src="/js/stomp.min.js"></script>
         <script src="/control.js"></script>
     </head>
     <body id="body">
